fix image alignment

--- a/clickopolis-delta/styles/css/index.css
+++ b/clickopolis-delta/styles/css/index.css
@@ -457,7 +457,7 @@ button, button:hover, .current-btn:hover, .checkbox-list input[type='checkbox']:
 
 img:not(.custom-size-img) {
   height: 1rem;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 img.clickopolis-logo {
