--- a/clickopolis-delta/styles/sass/_global.scss
+++ b/clickopolis-delta/styles/sass/_global.scss
@@ -38,7 +38,7 @@
 
 img:not(.custom-size-img) {
   height: 1rem;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 img.clickopolis-logo {
